# nophone

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  HANDOFF.md  NEW_DIRECTION.md  PLAN.md  README.md  STYLE.md  TESTING.md  capture.py  check_devices.py  customer_sim.py  db.py  glossary.example.txt  pyproject.toml  scoring.py  server.py  stt.py  stt_eval.py  suggest.py
static/: index.html  mockup.html
