[project]
name = "nophone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "numpy>=2.5.0",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
    "sounddevice>=0.5.5",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
